Fix white line CSS bug on mobile. Closes #4

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -65,6 +65,10 @@ body {
     color: white;
 }
 
+.description + .description {
+    margin-top: -1px;
+}
+
 .mission {
     text-align: center;
     font-weight: 300;
